# Redis-Like-CLI

./: LICENSE  README.md  db.rs  main.rs
server/: Cargo.toml
server/src/: bundle.rs  client.rs  commands.rs  config.rs  db.rs  main.rs  rdb.rs
server/src/commands/: __command__.rs  _helpers_.rs  config.rs  discard.rs  echo.rs  exec.rs  get.rs  incr.rs  info.rs  keys.rs  llen.rs  lrange.rs  multi.rs  other.rs  ping.rs  pop.rs  psync.rs  publish.rs  push.rs  replconf.rs  set.rs  subscribe.rs  type.rs  unsubscribe.rs  wait.rs  xadd.rs  xrange.rs  xread.rs  zadd.rs  zcard.rs  zrange.rs  zrank.rs  zrem.rs  zscore.rs
src/server/: commands.rs  db.rs  main.rs
src/src/: client.rs  config.rs  main.rs
