[package]
name = "redis-like-cli"
version = "0.1.0"
authors = ["Sagi Kanfi sagikan5@gmail.com"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
rand = "0.9.2"                                      # randomizing
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
